2013-08-22 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.5
  * minor corrections to README.md
2013-08-22 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.4
  * small corrections to ports.rb and README.md
2013-07-06 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.3
  * fixed lib/puppet/provider/bsdportconfig/ports.rb - delete_if was used as a
    global function
2013-07-06 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.2
  * corrections to README.md
2013-07-05 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.1
2013-07-05 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * corrections to README.md
  * fixed unit test to expect correct exception types
2013-07-05 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * initial implementation, ver. 0.1.0