@@ -1,3 +1,5 @@
+2013-08-27 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
+  * add support for plain package names (witohut origin)
 2013-08-22 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
   * release 0.1.5
   * minor corrections to README.md
